<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.BankFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_weight="1"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/dark_gray"
        app:boxStrokeWidth="0dp"
        app:hintTextColor="@color/black"
        android:focusableInTouchMode="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_search"
        app:startIconTint="@color/dark_gray"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        >


        <AutoCompleteTextView
            android:id="@+id/search_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:maxLines="1"
            android:maxLength="8"
            android:hint="@string/search"
            android:inputType="numberSigned"
            android:textColor="@color/black"
            android:imeOptions="actionDone"
            >

            <requestFocus />
        </AutoCompleteTextView>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/number_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_number"
        android:textAllCaps="true"
        android:textColor="@color/dark_gray"
        android:textSize="18sp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/search_layout"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/length_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/length"
        android:textSize="12sp"
        android:textColor="@color/dark_gray"
        app:layout_constraintTop_toBottomOf="@id/number_label"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"/>
    <TextView
        android:id="@+id/luhn_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/luhn"
        android:textSize="12sp"
        android:textColor="@color/dark_gray"
        app:layout_constraintTop_toBottomOf="@id/number_label"
        app:layout_constraintStart_toEndOf="@id/length_label"
        android:layout_marginStart="12dp"/>
    <TextView
        android:id="@+id/length_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/length_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/length_label"
/>

    <TextView
        android:id="@+id/luhn_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/luhn_label"
        app:layout_constraintStart_toStartOf="@id/luhn_label"
        app:layout_constraintEnd_toEndOf="@id/luhn_label"
       />

    <TextView
        android:id="@+id/type_label"
        android:text="@string/type"
        android:textColor="@color/dark_gray"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="@id/scheme_label"
        app:layout_constraintTop_toBottomOf="@id/search_layout" />

    <TextView
        android:id="@+id/type_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/type_label"
        app:layout_constraintStart_toStartOf="@id/type_label"
        app:layout_constraintEnd_toEndOf="@id/type_label" />

    <TextView
        android:id="@+id/brand_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brand"
        android:textSize="18sp"
        android:textColor="@color/dark_gray"
        app:layout_constraintTop_toBottomOf="@id/length_text"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"/>
    <TextView
        android:id="@+id/brand_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/brand_label"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/scheme_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scheme_network"
        android:textSize="18sp"
        android:textColor="@color/dark_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/brand_label"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"/>

    <TextView
        android:id="@+id/scheme_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/scheme_label"
        app:layout_constraintStart_toStartOf="@id/scheme_label"
        />

    <TextView
        android:id="@+id/prepaid_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prepaid"
        android:textSize="18sp"
        android:textColor="@color/dark_gray"
        app:layout_constraintStart_toStartOf="@id/brand_label"
        app:layout_constraintTop_toBottomOf="@id/brand_text"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"/>

    <TextView
        android:id="@+id/prepaid_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/prepaid_label"
        app:layout_constraintStart_toStartOf="@id/prepaid_label"
        app:layout_constraintEnd_toEndOf="@id/prepaid_label"
        />

    <TextView
        android:id="@+id/bank_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bank"
        android:textSize="18sp"
        android:textColor="@color/dark_gray"
        app:layout_constraintStart_toStartOf="@id/scheme_text"
        app:layout_constraintTop_toBottomOf="@id/scheme_text"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"/>

    <TextView
        android:id="@+id/bank_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/bank_label"
        app:layout_constraintStart_toStartOf="@id/bank_label"
        />

    <TextView
        android:id="@+id/bank_url_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/bank_name_text"
        app:layout_constraintStart_toStartOf="@id/bank_name_text" />

    <TextView
        android:id="@+id/bank_phone_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="phone"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/bank_url_text"
        app:layout_constraintStart_toStartOf="@id/bank_url_text"
        />


    <TextView
        android:id="@+id/country_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country"
        android:textSize="18sp"
        android:textColor="@color/dark_gray"
        app:layout_constraintStart_toStartOf="@id/prepaid_label"
        app:layout_constraintTop_toBottomOf="@id/bank_phone_text"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"/>

    <TextView
        android:id="@+id/country_emoji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/country_label"
        app:layout_constraintStart_toStartOf="@id/country_label"
        />

    <TextView
        android:id="@+id/country_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/country_label"
        app:layout_constraintStart_toEndOf="@id/country_emoji"
        />



    <TextView
        android:id="@+id/country_coords_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:autoLink="map"
        app:layout_constraintTop_toBottomOf="@id/country_name_text"
        app:layout_constraintStart_toStartOf="@id/country_emoji"
        />


</androidx.constraintlayout.widget.ConstraintLayout>